--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge - Encriptador</title>
+
 </head>
+
 <body>
+    <header>
+        <img src="./images/logo-alura.svg" alt="logo-alura" class="logo">
+        <h1 class="title">Encriptador de texto</h1>
+    </header>
+    <div class="container">
+        <div class="encrypt-section">
+            <textarea name="text" class="text-input" id="text-input" cols="30" rows="10"
+                placeholder="Ingresa el texto aquí"></textarea>
+            <p class="notice">⚠️ Solo letras minúsculas y sin acentos.</p>
+            <div class="buttons">
+                <button class="btn" type="button" onclick="encrypt()">Encriptar</button>
+                <button class="btn" type="button" onclick="decrypt()">Desencriptar</button>
+            </div>
+        </div>
+        <div class="result-section">
+            <img src="images/busqueda-palabra.png" alt="persona descifrando texto" class="result-image" />
+            <div id="encrypted-message" class="encrypted-message">
+                <h2 id="message-title">Ningún mensaje fue encontrado</h2>
+                <p id="message-paragraph">Ingresa el texto que deseas encriptar o desencriptar</p>
+            </div>
+            <textarea id="result-text" class="result-text" readonly></textarea>
+            <button id="copy-btn" class="btn-small">Copiar</button>
+        </div>
+    </div>
+    <footer><p>Desarrollado por: <a href="https://portafolio-beryl-seven.vercel.app/">Kevin Guaquez</a></p></footer>
     
 </body>
+
 </html>
