actualizacion del css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge - Encriptador</title>
-
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -13,6 +13,7 @@
         <img src="./images/logo-alura.svg" alt="logo-alura" class="logo">
         <h1 class="title">Encriptador de texto</h1>
     </header>
+    
     <div class="container">
         <div class="encrypt-section">
             <textarea name="text" class="text-input" id="text-input" cols="30" rows="10"
@@ -23,6 +24,7 @@
                 <button class="btn" type="button" onclick="decrypt()">Desencriptar</button>
             </div>
         </div>
+
         <div class="result-section">
             <img src="images/busqueda-palabra.png" alt="persona descifrando texto" class="result-image" />
             <div id="encrypted-message" class="encrypted-message">
@@ -33,8 +35,8 @@
             <button id="copy-btn" class="btn-small">Copiar</button>
         </div>
     </div>
+
     <footer><p>Desarrollado por: <a href="https://portafolio-beryl-seven.vercel.app/">Kevin Guaquez</a></p></footer>
     
 </body>
-
 </html>
