actualizacion del js

--- a/index.html
+++ b/index.html
@@ -39,4 +39,5 @@
     <footer><p>Desarrollado por: <a href="https://portafolio-beryl-seven.vercel.app/">Kevin Guaquez</a></p></footer>
     
 </body>
+<script src="app.js"></script>
 </html>
